force-app/main/default/objects/PgM_Role__c/fields/PgM_Program__c.field-meta.xml
<CustomField>
    <fullName>PgM_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>PgM_Program__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>