force-app/main/default/objects/PgM_Role__c/fields/PgM_Type__c.field-meta.xml
<CustomField>
    <fullName>PgM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Experience Design</fullName>
            </value>
            <value>
                <fullName>Functional Design</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Program/Project Management</fullName>
            </value>
            <value>
                <fullName>Scrum Team</fullName>
            </value>
            <value>
                <fullName>Solution Architecture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>