force-app/main/default/objects/PgM_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>